--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 	width: 100%;
-	height: 1000px;
+	height: 100vh;
 }
 .box {
 	height:100px;
@@ -167,15 +167,15 @@ background-color: #119;
 		transform: translateX(120px)
 	}
 	.time {
-		width: 120px;
-		height: 60px;
+		width: 140px;
+		height: 70px;
 		font-size: 16px;
-		left: 65%;
+		left: 60%;
 	}
 	.text {
-		width: 120px;
-		height: 60px;
-		left: 65%;
+		width: 140px;
+		height: 70px;
+		left: 60%;
 		top: 120px;
 		font-size: 16px;
 	}
